Revision history for Perl extension MooseX::SingleArg.

{{$NEXT}}

0.03      2012-03-20
 - Comment on MooseX::OneArgNew.
 - Add force option.

0.02      2012-03-19
 - Fix prereqs.

0.01      2012-03-19
 - First release.
