@@ -18,10 +18,9 @@ MooseX::SingleArg - No-fuss instantiation of Moose objects using a single argume
 
 =head1 DESCRIPTION
 
-This module provides a role and declarative sugar for allowing Moose instances
-to be constructed with a single argument.  Your class must use this module and
-then use the single_arg method to declare which of the class's attributes will
-be assigned the single argument value.
+This module allows Moose instances to be constructed with a single argument.
+Your class or role must use this module and then use the single_arg method to
+declare which attribute will be assigned the single argument value.
 
 If the class is constructed using the typical argument list name/value pairs,
 or with a hashref, then things work as is usual.  But, if the arguments are a
